@@ -1,3 +1,11 @@
+2004-05-18  David Jee  <djee@redhat.com>
+
+	* java/awt/image/MemoryImageSource.java
+	(newPixels(int,int,int,int,boolean)): Set only the specified
+	rectangle of pixels.
+	(newPixels(byte[],ColorModel,int,int)): Implement.
+	(newPixels(int[],ColorModel,int,int)): Implement.
+
 2004-05-18  Olga Rodimina  <rodimina@redhat.com>
 
 	* Makefile.am: Added new file.
